--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "14.2.3",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.66.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.21",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
